# clinical-rag

./: .gitignore  README.md
icu-note-copilot/: README.md  debug_llm.py  download_dataset.py  generate_report.py  pyproject.toml  requirements.txt  test_ollama.py
icu-note-copilot/app/: llm.py  main.py  metrics.py  retrieval.py
icu-note-copilot/app/static/: app.js  styles.css
icu-note-copilot/app/static/css/: styles.css
icu-note-copilot/app/static/js/: main.js
icu-note-copilot/app/templates/: index.html  login.html
icu-note-copilot/data/: clinical_notes_100.csv  clinical_notes_100.jsonl  sample_cases.csv  sample_row_template.json
icu-note-copilot/data/indices/: bm25.pkl  doc_ids.json  evidence_store.json  faiss.index
icu-note-copilot/data/processed/: codebook.jsonl  csv_conversations.jsonl  csv_full_notes.jsonl  csv_notes.jsonl  csv_summaries.jsonl  domain.jsonl  labs.jsonl  narrative_spans.jsonl
icu-note-copilot/scripts/: build_evidence_store.py
icu-note-copilot/src/icu_copilot/: __init__.py  config.py  logging_conf.py
icu-note-copilot/src/icu_copilot/api/: main.py
icu-note-copilot/src/icu_copilot/export/: __init__.py  export_report.py
icu-note-copilot/src/icu_copilot/ingest/: ingest_csv.py  load_files.py  parsers.py  schemas.py  validate.py
icu-note-copilot/src/icu_copilot/llm/: client.py  json_guard.py  prompts.py  (+2 more)
icu-note-copilot/tests/: test_evidence.py  test_parsers.py  test_retrieval.py  test_retrieval_smoke.py
icu-note-copilot/web/: main.py
icu-note-copilot/web/static/: app.js  chat.css  index.html  report-preview.html  style.css
(+51 files in other folders)
